--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "server": "node main.ts",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -33,6 +34,15 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "@types/node": "^12.20.3",
+    "@types/sinon": "^9.0.10",
+    "sinon": "^9.2.4",
+    "tap": "^14.11.0",
+    "ts-node": "^9.1.1",
+    "tsame": "^2.0.1",
+    "tslint": "^5.20.1",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript-tslint-plugin": "^1.0.1"
   }
 }
